# proyecto-final-ccom4997

./: .gitignore  CMakeLists.txt  InvertedIndex.h  main  main.cpp  sintaxis.cpp  template-copy.cpp  template.cpp
baby-dataset-flowers/: flowers.txt  hoya-bella.txt  lily-of-the-valley.txt  rose.txt  sunflower.txt
